--- a/inventory-spring-service/rest/src/admin-ui/.env
+++ b/inventory-spring-service/rest/src/admin-ui/.env
@@ -1,4 +1,4 @@
 SERVICE_URL=
 REACT_APP_API_PORT=8080
-REACT_APP_DB_URL=http://localhost:$REACT_APP_API_PORT
+REACT_APP_DB_URL=http://localhost:${REACT_APP_API_PORT}
 #SKIP_PREFLIGHT_CHECK=true
