--- a/inventory-spring-service/rest/src/admin-ui/.env.dev
+++ b/inventory-spring-service/rest/src/admin-ui/.env.dev
@@ -1,3 +1,3 @@
 SERVICE_URL=
 REACT_APP_API_PORT=8080
-REACT_APP_DB_URL=http://localhost:$REACT_APP_API_PORT
+REACT_APP_DB_URL=http://localhost:${REACT_APP_API_PORT}
