--- a/inventory-spring-service/rest/src/admin-ui/package.json
+++ b/inventory-spring-service/rest/src/admin-ui/package.json
@@ -7,7 +7,7 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.3.0",
     "@mui/lab": "^5.0.0-alpha.66",
-    "@mui/material": "^5.5.0",
+    "@mui/material": "^5.3.0",
     "@types/jest": "^27.0.3",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
@@ -24,7 +24,7 @@
     "react-bootstrap": "^2.0.3",
     "react-bootstrap-typeahead": "^6.0.0-alpha.4",
     "react-dom": "^17.0.2",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "5.0.0",
     "web-vitals": "^2.1.2",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
@@ -66,7 +66,7 @@
     "css-loader": "^6.7.1",
     "dotenv-webpack": "^7.0.3",
     "html-webpack-plugin": "^5.5.0",
-    "react-script": "^2.0.5",
+
     "typescript": "^4.1.6",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
