moved ui to new location

--- a/inventory-spring-service/rest/src/main/resources/application.properties
+++ b/inventory-spring-service/rest/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=8080
 spring.main.allow-bean-definition-overriding=true
 spring.thymeleaf.cache=false
+ui.js.server=http://localhost:8090
 
+local.server.port=8080
